2011-01-15  David Kilzer  <ddkilzer@apple.com>

        Skip fast/dom/Range/range-clone-contents.html on Windows

        Not reviewed.

        Filed: <https://bugs.webkit.org/show_bug.cgi?id=52524>

        * platform/win/Skipped: Skip test on Windows. The test passes
        on all other bots.

2011-01-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Incorrect behavior changing attributes of an accessor
        https://bugs.webkit.org/show_bug.cgi?id=52515

        Add an additional test for validating changing attributes of
        an accessor property.s

        * fast/js/Object-defineProperty-expected.txt:
        * fast/js/script-tests/Object-defineProperty.js:

2011-01-15  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/52512> REGRESSION(r73818): range.cloneContents() ignores end offset

        Reviewed by Adele Peterson.

        * fast/dom/Range/range-clone-contents-expected.txt: Added.
        * fast/dom/Range/range-clone-contents.html: Added.

2011-01-15  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] plugins/no-mime-with-valid-extension.html fails

        Check extension of resource against installed
        plugins when determining mime-type.

        https://bugs.webkit.org/show_bug.cgi?id=52288
        https://bugs.webkit.org/show_bug.cgi?id=50657
        * platform/qt/Skipped:

2011-01-15  Stephen White  <senorblanco@chromium.org>

        Unreviewed; updated chromium test expectations.

        * platform/chromium-gpu/test_expectations.txt:

2011-01-15  Stephen White  <senorblanco@chromium.org>

        Unreviewed; updated chromium test expectations.

        * platform/chromium-gpu/test_expectations.txt:
        * platform/chromium/test_expectations.txt:

2011-01-15  Tony Chang  <tony@chromium.org>

        Unreviewed, add new test to GTK+ Skipped list.
        https://bugs.webkit.org/show_bug.cgi?id=52508

        * platform/gtk/Skipped:
